--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://192.168.56.10:3306/mall_pms
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
@@ -17,5 +17,12 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      #配置逻辑删除规则
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
 server:
   port: 10000
+logging:
+  level:
+    com.gr.mall: debug
