--- a/renren-fast/src/main/resources/application-dev.yml
+++ b/renren-fast/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://192.168.56.10:3306/mall_admin?useSSL=false&useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+            url: jdbc:mysql://192.168.56.10:3306/mall_admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
             username: root
             password: root
             initial-size: 10
@@ -32,6 +32,12 @@ spring:
                 wall:
                     config:
                         multi-statement-allow: true
+    application:
+        name: renren-fast
+    cloud:
+        nacos:
+            discovery:
+                server-addr: 127.0.0.1:8848
 
 
 ##多数据源的配置
