--- a/mall-coupon/src/main/resources/bootstrap.properties
+++ b/mall-coupon/src/main/resources/bootstrap.properties
@@ -1,15 +1,15 @@
 spring.application.name=mall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#选择命名空间，默认为public，下面是生产环境的命名空间（nacos自动生成的）
-spring.cloud.nacos.config.namespace=67481c21-d6aa-4090-9133-de145a9f37cd
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#配置分组
+spring.cloud.nacos.config.namespace=67481c21-d6aa-4090-9133-de145a9f37cd
 spring.cloud.nacos.config.group=dev
 
 
-spring.cloud.nacos.config.extension-configs[0].data-id=datasource.yml
-spring.cloud.nacos.config.extension-configs[0].group=dev
-spring.cloud.nacos.config.extension-configs[0].refresh=true
+spring.cloud.nacos.config.ext-config[0].data-id=datasource.yml
+spring.cloud.nacos.config.ext-config[0].group=dev
+spring.cloud.nacos.config.ext-config[0].refresh=true
+
 
 spring.cloud.nacos.config.extension-configs[1].data-id=mybatis.yml
 spring.cloud.nacos.config.extension-configs[1].group=dev
