--- a/mall-ware/src/main/resources/application.yml
+++ b/mall-ware/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://119.3.74.146:3306/mall_wms
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://119.3.74.146:3306/mall_wms?useUnicode=true&characterEncoding=UTF8
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   cloud:
     nacos:
@@ -12,6 +12,8 @@ spring:
 
   application:
     name: mall-ware
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 
 mybatis-plus:
